# app/Http/Controllers/Controller.php
@@ -13,10 +13,6 @@ use Illuminate\Routing\Controller as BaseController;
  *     version="1.0.0",
  *     @OA\Contact(
  *         email="admin@example.com"
- *     ),
- *     @OA\License(
- *         name="Apache 2.0",
- *         url="http://www.apache.org/licenses/LICENSE-2.0.html"
  *     )
  * )
  * @OA\Tag(
