# storage/api-docs/api-docs.json
@@ -5,10 +5,6 @@
         "contact": {
             "email": "admin@example.com"
         },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
         "version": "1.0.0"
     },
     "servers": [
@@ -37,7 +33,14 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Lead has been saved"
+                        "description": "Lead has been saved",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GetLeadStatusResponse"
+                                }
+                            }
+                        }
                     }
                 },
                 "security": [
